# vipchip

./: Cargo.toml  README.md
examples/: chipmark.hex
src/: config.rs  emulator.rs  main.rs  options.rs  programs.rs
src/chip8/: font.rs  instruction.rs  mod.rs  opcode.rs  operand.rs  operation.rs  state.rs
src/chip8/opcode/: comparison.rs  display.rs  flowcontrol.rs  keyboard.rs  math.rs  memory.rs  mod.rs
src/core/: mod.rs  opcode.rs
src/fileio/: mod.rs  parser.rs
src/interface/: mod.rs
src/ui/: mod.rs
src/ui/interface/: mod.rs
